Fix overlay alignment in Firefox

--- a/apps/personalize/stylesheets/categories.styl
+++ b/apps/personalize/stylesheets/categories.styl
@@ -84,7 +84,7 @@ category-size = 400px
     font-size 20px
     padding-top 75px
   &.is-clicked
-    display inline
+    display block
     .icon-with-white-circle
       font-size 60px
       border 2px transparent
@@ -97,7 +97,7 @@ category-size = 400px
 
 .personalize-category-image-link:hover
   .personalize-following-overlay:not(.is-clicked)
-    display inline
+    display block
     .icon-with-white-circle
       color white
       fill white
